# thd-ss25-cv-project

./: .gitignore  README.md  csv_to_label.py  csv_to_yolo_txt.py  data.yaml  download.py  filtered_detections_train.csv  filtered_detections_validate.csv  main.py  predict.py  prepare.py  preprocess.py  pyproject.toml  real_time_detection.py  remove_non_chicken.py  results_show.py  single_test.py  toy_test.py  train.py  train_model.py  video_detection.py
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml  results.csv
src/cv_project/demo/: main.py  state.py  state_display.py  utils.py
src/cv_project/demo/detection/: process.py  process_utils.py  runner.py  schemas.py
src/cv_project/running/: real_time_detection.py  video_detection.py
src/cv_project/training/: lazy.py  output_keeper.py  recipe_utils.py  recipes.py  utils.py
