[project]
name = "thd-ss25-cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ultralytics>=8.3.144",
]

[tool.setuptools]
packages = []


[tool.ruff.lint]
select = ["I"]
