[project]
name = "thd-ss25-cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.38.44",
    "lap>=0.5.12",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyside6>=6.9.1",
    "requests>=2.32.3",
    "ultralytics>=8.3.144",
    "yt-dlp>=2025.6.25",
    "names_generator",
    "clip>=0.2.0",
]

[project.scripts]
"mk" = "cv_project.training.recipes:main"
"demo" = "cv_project.demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_project"]


[tool.ruff.lint]
select = ["I"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportUnknownMemberType = false

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
